--- a/coursera_2/final_project/final_project/levels.yml
+++ b/coursera_2/final_project/final_project/levels.yml
@@ -1,17 +1,11 @@
 levels:
-#  - !empty_map {}
+  - !empty_map {}
   - !special_map
-#    map_size: (22,22)
-    bless: 10
     rat: 5
-    stairs: 1
-    chest: 5
-#  - !special_map
-#    rat: 10
-#    knight: 5
-#    stairs: 1
-#  - !special_map
-#    rat: 10
-#    knight: 10
-#    stairs: 1
+  - !special_map
+    rat: 10
+    knight: 5
+  - !special_map
+    rat: 10
+    knight: 10
   - !random_map {}
